dark: fix input line-height issue on safari

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -220,7 +220,6 @@ input:not([type='radio']),
   padding-right: 13px !important;
   font-size: 14px !important;
   height: 38px !important;
-  line-height: 38px !important;
   outline: none;
 }
 
